--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -71,16 +71,44 @@ jobs:
           haxelib set hxcpp 4.2.1
           haxelib set SScript 7.0.0
           haxelib list
+          
       - name: Compile
         run: haxelib run lime build windows --app-version="4.0.0-${{ github.run_id}}"
+      - name: Clear Previous Cache
+        uses: actions/github-script@main
+        with:
+          script: |
+            try {
+            	const caches = await github.rest.actions.getActionsCacheList({
+            		owner: context.repo.owner,
+            		repo: context.repo.repo,
+            	})
+            	if (typeof caches.data.actions_caches != null && caches.data.actions_caches.length > 0) {
+            		for (const cache of caches.data.actions_caches) {
+            			if (cache.key == "cache-windows-build") {
+            				console.log('Clearing ' + cache.key + '...')
+            				await github.rest.actions.deleteActionsCacheById({
+            					owner: context.repo.owner,
+            					repo: context.repo.repo,
+            					cache_id: cache.id,
+            				})
+            				console.log("Previous Cache Cleared!")
+            			}
+            		}
+            	}
+            } catch (error) {
+            	console.log(error.message);
+            }
+
       - name: Save Current Cache
-        id: cache-build-windows-save
+        id: cache-release-build-windows-save
         uses: actions/cache/save@main
         with:
           path: |
-            .haxelib/
-            export/release/windows/haxe/
-            export/release/windows/obj/
+            ~/haxelib
+            ~/.gradle
+            export/release/windows/haxe
+            export/release/windows/obj
           key: cache-windows-build
 
       - name: Publish Artifact
@@ -88,6 +116,7 @@ jobs:
         with:
           name: Windows
           path: export/release/windows/bin
+          
   buildLinux:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -138,11 +167,49 @@ jobs:
           haxelib list  
       - name: Compile
         run: haxelib run lime build Project.xml linux --app-version="4.0.0-${{ github.run_id}}"
+      - name: Clear Previous Cache
+        uses: actions/github-script@main
+        with:
+          script: |
+            try {
+            	const caches = await github.rest.actions.getActionsCacheList({
+            		owner: context.repo.owner,
+            		repo: context.repo.repo,
+            	})
+            	if (typeof caches.data.actions_caches != null && caches.data.actions_caches.length > 0) {
+            		for (const cache of caches.data.actions_caches) {
+            			if (cache.key == "cache-linux-build") {
+            				console.log('Clearing ' + cache.key + '...')
+            				await github.rest.actions.deleteActionsCacheById({
+            					owner: context.repo.owner,
+            					repo: context.repo.repo,
+            					cache_id: cache.id,
+            				})
+            				console.log("Previous Cache Cleared!")
+            			}
+            		}
+            	}
+            } catch (error) {
+            	console.log(error.message);
+            }
+
+      - name: Save Current Cache
+        id: cache-release-build-linux-save
+        uses: actions/cache/save@main
+        with:
+          path: |
+            ~/haxelib
+            ~/.gradle
+            export/release/linux/haxe
+            export/release/linux/obj
+          key: cache-linux-build  
+          
       - name: Publish Artifact
         uses: actions/upload-artifact@v2.2.4
         with:
           name: Linux
           path: 'export/release/linux/bin'
+          
   buildMac:
     runs-on: macos-latest
 
@@ -189,6 +256,42 @@ jobs:
           haxelib list  
       - name: Compile
         run: haxelib run lime build mac --app-version="4.0.0-${{ github.run_id}}"
+       - name: Clear Previous Cache
+        uses: actions/github-script@main
+        with:
+          script: |
+            try {
+            	const caches = await github.rest.actions.getActionsCacheList({
+            		owner: context.repo.owner,
+            		repo: context.repo.repo,
+            	})
+            	if (typeof caches.data.actions_caches != null && caches.data.actions_caches.length > 0) {
+            		for (const cache of caches.data.actions_caches) {
+            			if (cache.key == "cache-macos-build") {
+            				console.log('Clearing ' + cache.key + '...')
+            				await github.rest.actions.deleteActionsCacheById({
+            					owner: context.repo.owner,
+            					repo: context.repo.repo,
+            					cache_id: cache.id,
+            				})
+            				console.log("Previous Cache Cleared!")
+            			}
+            		}
+            	}
+            } catch (error) {
+            	console.log(error.message);
+            }
+
+      - name: Save Current Cache
+        id: cache-release-build-macos-save
+        uses: actions/cache/save@main
+        with:
+          path: |
+            ~/haxelib
+            ~/.gradle
+            export/release/macos/haxe
+            export/release/macos/obj
+          key: cache-macos-build
       - name: Publish Artifact
         uses: actions/upload-artifact@v2.2.4
         with:
