--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -35,6 +35,7 @@ jobs:
             export/release/windows/haxe/
             export/release/windows/obj/
           key: cache-windows-build
+
       # Runs a set of commands using the runners shell
       - name: Install Haxelib
         run: |
@@ -72,48 +73,24 @@ jobs:
           haxelib list
       - name: Compile
         run: haxelib run lime build windows --app-version="4.0.0-${{ github.run_id}}"
-      - name: Clear Previous Cache
-        uses: actions/github-script@main
-        with:
-          script: |
-            try {
-            	const caches = await github.rest.actions.getActionsCacheList({
-            		owner: context.repo.owner,
-            		repo: context.repo.repo,
-            	})
-            	if (typeof caches.data.actions_caches != null && caches.data.actions_caches.length > 0) {
-            		for (const cache of caches.data.actions_caches) {
-            			if (cache.key == "cache-windows-build") {
-            				console.log('Clearing ' + cache.key + '...')
-            				await github.rest.actions.deleteActionsCacheById({
-            					owner: context.repo.owner,
-            					repo: context.repo.repo,
-            					cache_id: cache.id,
-            				})
-            				console.log("Previous Cache Cleared!")
-            			}
-            		}
-            	}
-            } catch (error) {
-            	console.log(error.message);
-            }
       - name: Save Current Cache
         id: cache-build-windows-save
         uses: actions/cache/save@main
         with:
           path: |
-            ~/haxelib
-            export/release/windows/haxe
-            export/release/windows/obj
+            .haxelib/
+            export/release/windows/haxe/
+            export/release/windows/obj/
           key: cache-windows-build
+
       - name: Publish Artifact
         uses: actions/upload-artifact@v2.2.4
         with:
           name: Windows
-          path: export/release/windows/bin          
+          path: export/release/windows/bin
   buildLinux:
     # The type of runner that the job will run on
-    runs-on: linux-latest
+    runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -161,40 +138,6 @@ jobs:
           haxelib list  
       - name: Compile
         run: haxelib run lime build Project.xml linux --app-version="4.0.0-${{ github.run_id}}"
-      - name: Clear Previous Cache
-        uses: actions/github-script@main
-        with:
-          script: |
-            try {
-            	const caches = await github.rest.actions.getActionsCacheList({
-            		owner: context.repo.owner,
-            		repo: context.repo.repo,
-            	})
-            	if (typeof caches.data.actions_caches != null && caches.data.actions_caches.length > 0) {
-            		for (const cache of caches.data.actions_caches) {
-            			if (cache.key == "cache-linux-build") {
-            				console.log('Clearing ' + cache.key + '...')
-            				await github.rest.actions.deleteActionsCacheById({
-            					owner: context.repo.owner,
-            					repo: context.repo.repo,
-            					cache_id: cache.id,
-            				})
-            				console.log("Previous Cache Cleared!")
-            			}
-            		}
-            	}
-            } catch (error) {
-            	console.log(error.message);
-            }
-      - name: Save Current Cache
-        id: cache-build-linux-save
-        uses: actions/cache/save@main
-        with:
-          path: |
-            ~/haxelib
-            export/release/linux/haxe
-            export/release/linux/obj
-          key: cache-linux-build  
       - name: Publish Artifact
         uses: actions/upload-artifact@v2.2.4
         with:
@@ -246,40 +189,6 @@ jobs:
           haxelib list  
       - name: Compile
         run: haxelib run lime build mac --app-version="4.0.0-${{ github.run_id}}"
-       - name: Clear Previous Cache
-        uses: actions/github-script@main
-        with:
-          script: |
-            try {
-            	const caches = await github.rest.actions.getActionsCacheList({
-            		owner: context.repo.owner,
-            		repo: context.repo.repo,
-            	})
-            	if (typeof caches.data.actions_caches != null && caches.data.actions_caches.length > 0) {
-            		for (const cache of caches.data.actions_caches) {
-            			if (cache.key == "cache-macos-build") {
-            				console.log('Clearing ' + cache.key + '...')
-            				await github.rest.actions.deleteActionsCacheById({
-            					owner: context.repo.owner,
-            					repo: context.repo.repo,
-            					cache_id: cache.id,
-            				})
-            				console.log("Previous Cache Cleared!")
-            			}
-            		}
-            	}
-            } catch (error) {
-            	console.log(error.message);
-            }
-      - name: Save Current Cache
-        id: cache-build-macos-save
-        uses: actions/cache/save@main
-        with:
-          path: |
-            ~/haxelib
-            export/release/macos/haxe
-            export/release/macos/obj
-          key: cache-macos-build
       - name: Publish Artifact
         uses: actions/upload-artifact@v2.2.4
         with:
