--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -41,16 +41,16 @@ jobs:
         run: |
           haxelib setup ~/haxelib
           haxelib install hxcpp 4.2.1 > /dev/null
-          haxelib install lime
+          haxelib install lime 7.9.0
           haxelib install openfl 9.2.0
-          haxelib install flixel
+          haxelib --never install flixel 5.2.2
           haxelib run lime setup flixel
-          haxelib run lime setup
-          haxelib install flixel-tools
+          haxelib install flixel-tools 1.5.1
           haxelib install flixel-ui
-          haxelib install flixel-addons
+          haxelib install flixel-addons 3.0.2
           haxelib install tjson
           haxelib install hxjsonast
+          haxelib install SScript
           haxelib git hxCodec https://github.com/beihu235/hxCodec
           haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
           haxelib install SScript
@@ -102,16 +102,16 @@ jobs:
           sudo apt-get install libvlccore-dev
           haxelib install hxcpp > /dev/null --quiet
           haxelib setup ~/haxelib
-          haxelib install lime
+          haxelib install lime 7.9.0
           haxelib install openfl 9.2.0
-          haxelib install flixel
+          haxelib --never install flixel 5.2.2
           haxelib run lime setup flixel
-          haxelib run lime setup
-          haxelib install flixel-tools
+          haxelib install flixel-tools 1.5.1
           haxelib install flixel-ui
-          haxelib install flixel-addons
+          haxelib install flixel-addons 3.0.2
           haxelib install tjson
           haxelib install hxjsonast
+          haxelib install SScript
           haxelib git hxCodec https://github.com/beihu235/hxCodec
           haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
           haxelib install SScript
