--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -42,7 +42,7 @@ jobs:
           haxelib setup ~/haxelib
           haxelib install hxcpp 4.2.1 > /dev/null
           haxelib install lime 7.9.0
-          haxelib install openfl
+          haxelib install openfl 9.1.0
           haxelib --never install flixel 5.2.2
           haxelib run lime setup flixel
           haxelib install flixel-tools 1.5.1
@@ -115,7 +115,7 @@ jobs:
           haxelib install tjson
           haxelib install hxjsonast
           haxelib install SScript
-          haxelib git hxCodec https://github.com/polybiusproxy/hxCodec
+          haxelib install hxCodec 2.6.0
           haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
           haxelib install SScript
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
