--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -39,10 +39,10 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Install Haxelib
         run: |
-          haxelib setup ~/haxelib
+          haxelib setup C:/haxelib
           haxelib install hxcpp 4.2.1 > /dev/null
           haxelib install lime 7.9.0
-          haxelib install openfl 9.1.0
+          haxelib install openfl 9.2.0
           haxelib --never install flixel 5.2.2
           haxelib run lime setup flixel
           haxelib install flixel-tools 1.5.1
@@ -64,7 +64,7 @@ jobs:
         run: |
           haxelib run lime setup -alias -y
           haxelib set lime 7.9.0
-          haxelib set openfl 9.1.0
+          haxelib set openfl 9.2.0
           haxelib set flixel 5.2.2
           haxelib set flixel-addons 3.0.2
           haxelib set hxcpp 4.2.1
