--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -69,7 +69,7 @@ jobs:
           haxelib git flxanimate https://github.com/beihu235/flxanimate
           haxelib git linc_luajit https://github.com/superpowers04/linc_luajit
           haxelib git extension-androidtools https://github.com/MaysLastPlay77/extension-androidtools
-          haxelib git extension-orientation https://github.com/HaxeExtension/extension-orientation.git
+          haxelib git extension-orientation https://github.com/HaxeExtension/extension-orientation
           haxelib git androiddialogs https://github.com/beihu235/AndroidDialogs
           haxelib git devicelanguage https://github.com/beihu235/devicelanguage
           haxelib list         
